Bridge runtime option parser policy dependencies